--- a/linuxbuh-1c-installer-0.5
+++ b/linuxbuh-1c-installer-0.5
@@ -7,7 +7,7 @@ MACHINE_TYPE=`uname -m`
 if [ $MACHINE_TYPE == x86_64 ]; then
     OSBITVER=64
 fi
-if [ $MACHINE_TYPE == 32 ]; then
+if [ $MACHINE_TYPE == i686 ]; then
     OSBITVER=32
 fi
 #
@@ -154,7 +154,7 @@ done
 	#Устанавливаем какие пакеты качать deb или rpm
 	if [ $OSBITVER == 32 ]; then
 	    OSBIT=32
-	    BITPACKETVER=i386
+	    BITPACKETVER=i686
 	fi
 	if [ $OSBITVER == 64 ]; then
 	    OSBIT=64
@@ -182,7 +182,7 @@ done
     fi
     if [ $BITPAKETVIBOR == 32 ]; then
 	    OSBIT=32
-	    BITPACKETVER=i386
+	    BITPACKETVER=i686
     fi
     if [ $BITPAKETVIBOR == 64 ]; then
 	    OSBIT=64
@@ -600,12 +600,12 @@ rm $UPLOADDIRPLATFORM/*.deb
 #
 
 #Копируем tar.gz в папку /var/calculate/remote/distfiles\
-#echo -e "\e[1;33;4;44mКопируем пакеты платформы в формате tar.gz в папку /var/calculate/remote/distfiles\e[0m"
-#if [ $USERID == 0 ]; then
-#cp $UPLOADDIRPLATFORM/*.tar.gz /var/calculate/remote/distfiles
-#else
-#echo $PASSWORDROOT | sudo -S cp $UPLOADDIRPLATFORM/*.tar.gz /var/calculate/remote/distfiles
-#fi
+echo -e "\e[1;33;4;44mКопируем пакеты платформы в формате tar.gz в папку /var/calculate/remote/distfiles\e[0m"
+if [ $USERID == 0 ]; then
+cp $UPLOADDIRPLATFORM/*.tar.gz /var/calculate/remote/distfiles
+else
+echo $PASSWORDROOT | sudo -S cp $UPLOADDIRPLATFORM/*.tar.gz /var/calculate/remote/distfiles
+fi
 #
 
 
@@ -615,7 +615,7 @@ echo -e "\e[1;31;42mУстановить программу?\e[0m"
 echo
 PS3='Установить программу? '
 echo
-select INSTALLPLATFORMEMERGE in "Да" "Нет"
+select INSTALLPLATFORMEMERGE in "Да" "Нет" "Распаковать_клиента_в_папку"
 do
   echo
   echo -e "\e[1;34;4mВы выбрали $INSTALLPLATFORMEMERGE\e[0m"
@@ -633,13 +633,13 @@ done
 	if [ $SERVER_CLIENT = "Клиент" ]; then
 	echo -e "\e[1;34;4mУстанавливаем 1c-enterprise83-client-${VERPLATFORM}\e[0m"
 	    if [ $USERID == 0 ]; then
-#		emerge =1c-enterprise83-client-${VERPLATFORM}
-#		emerge =1c-enterprise83-client-nls-${VERPLATFORM}
-	    tar -xvf $UPLOADDIRPLATFORM/1c-enterprise83-client_${VERPLATFORMSTIRE}_amd64.tar.gz -C /tmp/10
+		emerge =1c-enterprise83-client-${VERPLATFORM}
+		emerge =1c-enterprise83-client-nls-${VERPLATFORM}
+#	    tar -xvf $UPLOADDIRPLATFORM/1c-enterprise83-client_${VERPLATFORMSTIRE}_amd64.tar.gz -C /tmp/10
 	    else
-#		echo $PASSWORDROOT | sudo -S emerge =1c-enterprise83-client-${VERPLATFORM}
-#		echo $PASSWORDROOT | sudo -S emerge =1c-enterprise83-client-nls-${VERPLATFORM}
-		echo $PASSWORDROOT | sudo -S tar -xvf $UPLOADDIRPLATFORM/1c-enterprise83-client_${VERPLATFORMSTIRE}_amd64.tar.gz -C /tmp/10
+		echo $PASSWORDROOT | sudo -S emerge =1c-enterprise83-client-${VERPLATFORM}
+		echo $PASSWORDROOT | sudo -S emerge =1c-enterprise83-client-nls-${VERPLATFORM}
+#		echo $PASSWORDROOT | sudo -S tar -xvf $UPLOADDIRPLATFORM/1c-enterprise83-client_${VERPLATFORMSTIRE}_amd64.tar.gz -C /tmp/10
 	    fi
 	fi
 	if [ $SERVER_CLIENT = "Сервер" ]; then
@@ -709,8 +709,13 @@ done
     fi
 
     if [ $INSTALLPLATFORMEMERGE = "Нет" ]; then
-    echo -e "\e[1;33;4;44mТеперь выполните комманду по установке 1С клиента, например emerge =1c-enterprise83-client-$VERPLATFORM или emerge =1c-enterprise83-server-$VERPLATFORM\e[0m"
+	echo -e "\e[1;33;4;44mТеперь выполните комманду по установке 1С клиента, например emerge =1c-enterprise83-client-$VERPLATFORM или emerge =1c-enterprise83-server-$VERPLATFORM\e[0m"
     fi
+
+    if [ $INSTALLPLATFORMEMERGE = "Распаковать_клиента_в_папку" ]; then
+	echo -e "\e[1;33;4;44mРаспаковываем (типа устанавливаем) 1c-enterprise83-client-$VERPLATFORM в папку /opt/1C/v8.3/$VERPLATFORM/$MACHINE_TYPE\e[0m"
+    fi
+
 fi
 #
 
